Fix dots in dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,9 +45,11 @@
 
     .workSlider .slick-dots li button:before {
         font-size: 10px;
+        @apply text-black dark:text-white;
     }
     .workSlider .slick-dots li.slick-active button:before {
         font-size: 14px;
+        @apply text-black dark:text-white;
     }
 
     .bgSlider {
